kubernetes/apps/rook-ceph/rook-ceph/object-store/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-cache-rgw
spec:
  podSelector:
    matchLabels:
      app: rook-ceph-rgw
      rook_object_store: internal-cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              storage.homelab/object-cache-access: "true"
      ports:
        - protocol: TCP
          port: 8080
